--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <script
           src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
           crossorigin></script>
-
+  <script src=""
   <script
           src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
           crossorigin></script>
